# BPPIDataBridge

./: .gitignore  LICENSE  MANIFEST.in  README.md  delta.tag  pyproject.toml
logs/: DEPLOY-TEST  pipe_csv2csv.log.1
src/: bppidatabridge.py  main.py
src/bppidatabridge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/bppidb/: __init__.py  bpapiDS.py  bppiDS.py  bprepoDS.py
src/bppidb/bppi/: bppiApiRepositoryWrapper.py  bppiRepository.py
src/bppidb/bprepo/: blueprismSQLBuilder.py  bpLogsProcessing.py  genericSQLBuilder.py
src/bppidb/config/parameters/datasources/: bpapiDS.json  bppiDS.json
src/bppidb/config/pipelines/: bpapi2bppi_direct.json  bprepo2bppi_direct.json  csv2bppi_direct.json
src/config/parameters/datasources/: bprepoDS.json
src/config/pipelines/: bprepo2bppi_direct.json  csv2bppi_direct.json
src/extends/: bppiDS.py  bprepoDS.py  constants.py
src/extends/bppi/: bppiApiRepositoryWrapper.py  bppiRepository.py
src/extends/bprepo/: blueprismSQLBuilder.py  bpLogsProcessing.py  genericSQLBuilder.py
src/pipelite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
